added ProductsDB and do refactoring
