# swagger.yaml
@@ -3,15 +3,17 @@ consumes:
 - application/json
 definitions:
   GenericError:
-    description: GenericError is a generic error message returned by a server
+    description: GenericError GenericError is a generic error message returned by
+      a server
     properties:
       message:
+        description: message
         type: string
         x-go-name: Message
     type: object
-    x-go-package: product-api/handlers
+    x-go-package: product-api/sdk/models
   Product:
-    description: Product defines the structure for an API product
+    description: Product Product defines the structure for an API product
     properties:
       description:
         description: the description for this poduct
@@ -45,17 +47,19 @@ definitions:
     - price
     - sku
     type: object
-    x-go-package: product-api/data
+    x-go-package: product-api/sdk/models
   ValidationError:
-    description: ValidationError is a collection of validation error messages
+    description: ValidationError ValidationError is a collection of validation error
+      messages
     properties:
       messages:
+        description: messages
         items:
           type: string
         type: array
         x-go-name: Messages
     type: object
-    x-go-package: product-api/handlers
+    x-go-package: product-api/sdk/models
 info:
   description: Documentation for Product API
   title: of Product API
@@ -65,6 +69,13 @@ paths:
     get:
       description: Return a list of products from the database
       operationId: listProducts
+      parameters:
+      - description: |-
+          Currency used when returning the price of the product,
+          when not specified currency is returned in GBP.
+        in: query
+        name: Currency
+        type: string
       responses:
         "200":
           $ref: '#/responses/productsResponse'
@@ -137,6 +148,12 @@ paths:
       description: Return a list of products from the database
       operationId: listSingleProduct
       parameters:
+      - description: |-
+          Currency used when returning the price of the product,
+          when not specified currency is returned in GBP.
+        in: query
+        name: Currency
+        type: string
       - description: The id of the product for which the operation relates
         format: int64
         in: path
